# etl_datos_arg

./: .gitignore  README.md  challenge.md  pyproject.toml  requirements.txt  settings.ini.ex
notebooks/: data exploratory.ipynb
notebooks/.ipynb_checkpoints/: data exploratory-checkpoint.ipynb
sql/: raw.sql  size_by_category.sql  size_by_datasource.sql
src/: cfg.py  constants.py  create_tables.py  etl.py  extractors.py  loaders.py
